<resources>
    <string name="app_name">Cartomoneya</string>

    <!-- Abbyy OCR Cloud application name and password -->
    <string name="applicationId">Intrafab Card</string>
    <string name="password">rs8DFeVgFt7sCALXO529Ma6O</string>
    <!-- Abbyy OCR Cloud application name and password -->


    <string name="hello_world">Hello world!</string>
    <string name="action_OCR_cam">OCR from CAM </string>
    <string name="action_OCR_file">OCR from file</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync with server</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_crop">Crop</string>
    <string name="action_create">Create</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>

    <!-- Shopping Cards -->
    <string name="shopping_card_screen_header">Shopping Cards</string>
    <string name="shopping_card_name_unknown">Unknown</string>
    <string name="empty_state_shopping_list">List is empty.\n Tap + to add.</string>

    <!-- New Card -->
    <string name="new_card_screen_header">New Card</string>
    <string name="edit_card_screen_header">Edit Card</string>
    <string name="tab_new_card_frot">Front card image</string>
    <string name="tab_new_card_back">Back card image</string>
    <string name="error_need_front_image">Need select front image</string>
    <string name="error_need_input_name">Need input card name</string>
    <string name="error_need_input_contact_name">Need input contact name</string>
    <string name="select_brand">Select brand</string>
    <string name="card_name">Card Name</string>
    <string name="contact_name">Name</string>
    <string name="contact_job_title">JobTitle:</string>
    <string name="contact_company_name">Company</string>
    <string name="contact_company_address_label_det">Address:</string>
    <string name="contact_company_address_label">Address</string>
    <string name="contact_company_website_label">Web</string>
    <string name="contact_company_website_label_det">Web:</string>
    <string name="contact_company_email_label">E-Mail</string>
    <string name="contact_company_email_label_det">E-Mail:</string>
    <string name="contact_company_Mobile_label">Mobile</string>
    <string name="contact_company_Phone_label">Phone</string>
    <string name="contact_company_Fax_label">Fax</string>
    <string name="contact_company_Fax_label_det">Fax:</string>
    <string name="contact_company_Skype_label">Skype</string>

    <string name="barcode">Barcode</string>
    <string name="brand">Brand</string>
    <string name="notes">Notes</string>
    <string name="your_notes">Your notes</string>
    <string name="success_create_shop_card">Карта успешно создана</string>
    <string name="success_update_shop_card">Карта успешно обновлена</string>

    <string name="error_internet_not_available">Интернет не доступен. Проверьте подключение или попробуйте позже.</string>
    <string name="error_occurred">Ошибка. Не удалось подключиться к серверу</string>

    <!-- Business Cards -->
    <string name="business_card_screen_header">Business Cards</string>
    <string name="business_card_name_unknown">Unknown</string>
    <string name="empty_state_business_list">List is empty.\n Tap + to add.</string>

    <!-- Business Cards Details -->
    <string name="work_phone_label">Work phone:</string>
    <string name="cell_phone_label">Cell phone:</string>
    <string name="skype_label">Skype:</string>

    <!-- Shopping list item -->
    <string name="shopping_list_item_empty">EMPTY</string>
    <string name="shopping_list_title">Shopping List</string>
    <string name="loaging">Loading</string>

    <!-- Shop offers -->
    <string name="empty_state_shop_offers_list">List is empty.</string>
    <string name="shop_offer_title_unknown">Unknown offer</string>
    <string name="shop_offer_screen_header">Shop Offers</string>

    <string name="please_wait">Please, wait&#8230;</string>
    <string name="dialog_progress_login">Check Account</string>
    <string name="error_login">Ошибка. Не удалось авторизоваться. Проверьте правильность введенных данных.</string>
    <string name="error_empty_login">Необходимо ввести Email</string>
    <string name="error_email_format">Введенный email имеет неправильный формат</string>
    <string name="error_password_format">Может содержать строчные и заглавные буквы, цифры. От 6 до 20 символов.</string>

    <!-- Favorites -->
     <string name="favorites_card_screen_header">Favorites Cards</string>

    <!-- NFC -->
    <string name="nfc_card_screen_header">NFC Cards</string>
    <string name="nfc_main">nfc</string>
    <!-- favorites -->
    <string name="favorites_main">favorites</string>
    <!-- ABBYY OCR -->

    <!-- Preferences labels -->
    <string name="preference_label_category_recognition_languages">Recognition languages</string>
    <string name="preference_label_category_recognition_mode">Recognition mode</string>
    <string name="preference_label_category_image_processing_options">Image processing options</string>
    <string name="preference_label_recognition_languages_ocr">Recognition languages</string>
    <string name="preference_title_recognition_languages_ocr">OCR languages</string>
    <string name="preference_dialog_recognition_languages_ocr">OCR languages</string>
    <string name="preference_summary_recognition_languages_ocr">Specify which languages should be used for text recognition.</string>
    <string name="preference_title_recognition_languages_bcr">BCR languages</string>
    <string name="preference_dialog_recognition_languages_bcr">BCR languages</string>
    <string name="preference_summary_recognition_languages_bcr">Specify which languages should be used for BCR recognition.</string>
    <string name="preference_label_recognition_mode_full">Full mode</string>
    <string name="preference_label_detect_page_orientation">Detect page orientation</string>
    <string name="preference_label_prebuild_words_info">Prebuild words info</string>
    <string name="preference_label_build_words_info">Build words info</string>
    <!-- Error messages -->
    <string name="dialog_error">Error</string>
    <string name="error_bad_license">Bad license.</string>
    <string name="error_no_permanent_data">No permanent data for recognition. European patterns, english dictionaries and keywords must be present.</string>
    <string name="error_loading_image">Error loading image</string>
    <!-- BCR dialogs -->
    <string name="dialog_bcr">BCR</string>
    <string name="error_no_data_found">No data found.</string>
    <!-- Standard buttons captions -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_close">Close</string>
    <!-- Main activity labels -->
    <string name="button_image_source">Image source</string>
    <string name="button_preferences">Preferences</string>
    <string name="button_recognize">Recognize Text</string>
    <string name="button_recognize_bcr">Recognize BCR</string>
    <string name="button_recognize_barcode">Recognize Barcode</string>
    <string name="dialog_image_source">Select image source</string>
    <string name="radio_from_resources">From resources</string>
    <string name="radio_from_gallery">From gallery</string>
    <string name="radio_from_camera">From camera</string>
    <!--                 -->
    <string name="service_name">CardEmulation Sample</string>
    <string name="card_title">Sample Access Card</string>
    <string name="account_number">Access code</string>
</resources>
